Equinox Framework is required for plugin-test launches
Currently with the new feature to only include what is minimally
required this can lead to the strange situation that the test fails to
startup, if one then adds the org.eclipse.osgi to the bundle list it
works without a problem.

This now adds the "org.eclipse.osgi" as a requirement for plugin-test
launches as it is mandatory anyways.